--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,9 @@ PORT = 8080
 DB_USERNAME = admin
 DB_PASSWORD = 78OATGWt1GoHJIxe
 DB_URL = mongodb+srv://admin:78OATGWt1GoHJIxe@server.njb0yff.mongodb.net/?retryWrites=true&w=majority&appName=server
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@diolitcl0
+CLUDINARY_API_KEY=811646516361921
+CLOUDINARY_API_SECRET=p0BYtDqs62x0dSFMmmfoMz4c8Aw
+CLODUINARY_NAME=Chatwave
+JWT_ACCESS_SECRET_KEY=chat_wave_secret
+JWT_REFRESH_SECRET_KEY=chat_project
