--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT = 8080
 DB_USERNAME = admin
 DB_PASSWORD = 78OATGWt1GoHJIxe
 DB_URL = mongodb+srv://admin:78OATGWt1GoHJIxe@server.njb0yff.mongodb.net/?retryWrites=true&w=majority&appName=server
+GMAIL_USER = aysuid@code.edu.az
+GMAIL_PASS = bbju mfuy afwh pwka
