--- a/server/.env
+++ b/server/.env
@@ -10,5 +10,7 @@ CLOUDINARY_API_SECRET=p0BYtDqs62x0dSFMmmfoMz4c8Aw
 CLODUINARY_NAME=Chatwave
 JWT_ACCESS_SECRET_KEY=chat_wave_secret
 JWT_REFRESH_SECRET_KEY=chat_project
-SERVER_URL=http://localhost.8080
+SERVER_URL=http://localhost:8080
+CLIENT_URL = http://localhost:5173
+
 
