feat: add passportjs config with google and github

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,11 +9,12 @@
     }
   ],
   "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "types": ["node"],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   }
 }
