--- a/server/.env
+++ b/server/.env
@@ -12,5 +12,7 @@ JWT_ACCESS_SECRET_KEY=chat_wave_secret
 JWT_REFRESH_SECRET_KEY=chat_project
 SERVER_URL=http://localhost:8080
 CLIENT_URL = http://localhost:5173
-
-
+GOOGLE_CLIENT_ID = 1050457845581-4csn6e44rt3t6hjathrg3849h7qi5cg8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+GITHUB_CLIENT_ID = Ov23liEG4Kwet2fSSVNe
+GITHUB_CLIENT_SECRET = a6601005d5acec8c26c84b27f9f23d8b58e9c10f
