--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
@@ -30,7 +33,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
-    "vanta": "^0.5.24"
+    "vanta": "^0.5.24",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
