--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
