--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -23,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
