--- a/server/.env
+++ b/server/.env
@@ -4,10 +4,10 @@ DB_PASSWORD = 78OATGWt1GoHJIxe
 DB_URL = mongodb+srv://admin:78OATGWt1GoHJIxe@server.njb0yff.mongodb.net/?retryWrites=true&w=majority&appName=server
 GMAIL_USER = aysuid@code.edu.az
 GMAIL_PASS = bbju mfuy afwh pwka
-CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@diolitcl0
-CLUDINARY_API_KEY=811646516361921
+CLOUDINARY_URL=cloudinary://811646516361921:p0BYtDqs62x0dSFMmmfoMz4c8Aw@diolitcl0
+CLOUDINARY_API_KEY=811646516361921
 CLOUDINARY_API_SECRET=p0BYtDqs62x0dSFMmmfoMz4c8Aw
-CLODUINARY_NAME=Chatwave
+CLOUDINARY_NAME=diolitcl0
 JWT_ACCESS_SECRET_KEY=chat_wave_secret
 JWT_REFRESH_SECRET_KEY=chat_project
 SERVER_URL=http://localhost:8080
