--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "sonner": "^2.0.6",
+    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
