feat: add new function in register and sendMail service updated

--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "notistack": "^3.0.2",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
@@ -44,6 +46,7 @@
     "@types/node": "^24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/three": "^0.178.1",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
