--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
