feat: added sending gifs in chat page

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_SERVER_URL= http://localhost:8080
 VITE_CLIENT_URL = http://localhost:5173
+VITE_GIPHY_API_KEY = NilJDSAPFMqepFXAp3qS7A7TRc57ebIy
