feat: added deploy server link

--- a/server/.env
+++ b/server/.env
@@ -10,7 +10,7 @@ CLOUDINARY_API_SECRET=p0BYtDqs62x0dSFMmmfoMz4c8Aw
 CLOUDINARY_NAME=diolitcl0
 JWT_ACCESS_SECRET_KEY=chat_wave_secret
 JWT_REFRESH_SECRET_KEY=chat_project
-SERVER_URL=http://localhost:8080
+SERVER_URL=https://chatwave-server-45fp.onrender.com
 CLIENT_URL = http://localhost:5173
 GOOGLE_CLIENT_ID = 1050457845581-4csn6e44rt3t6hjathrg3849h7qi5cg8.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
