--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_SERVER_URL= http://localhost:8080
+VITE_SERVER_URL= https://chatwave-server-45fp.onrender.com
 VITE_CLIENT_URL = http://localhost:5173
 VITE_GIPHY_API_KEY = NilJDSAPFMqepFXAp3qS7A7TRc57ebIy
