feat: added deployed client url

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_SERVER_URL= https://chatwave-server-45fp.onrender.com
-VITE_CLIENT_URL = http://localhost:5173
+VITE_CLIENT_URL = https://chat-app-lemon-five-67.vercel.app
 VITE_GIPHY_API_KEY = NilJDSAPFMqepFXAp3qS7A7TRc57ebIy
